  * Use mirror.ftp-master instead of specific hostnames

  [ James McCoy ]
  * debcommit: Correctly show --strip-message is the default in --help.
    (Closes: #766885)
  * mk-origtargz: Warn about unmatched Files-Excluded patterns.  (Closes:
    #766641)
  * annotate-output: Fix handling of a date format that contains whitespace.
    (Closes: #766180)

  [ Jakub Wilk ]
  * sadt:
    + Fix handling of rw-build-tree restriction
    + Improve handling of non-executable test files.  When rw-build-tree is in
      effect, simply chmod the file.  Otherwise, attempt to chmod the file
      (skipping the test on failure) and restore the original permissions on
      completion.  (Closes: #749729)

  [ Adam D. Barratt ]
  * debchange:
    + Fix handling of changelogs where the most recent trailer line does not
      include a maintainer name.  (Closes: #766516)
    + Add jessie-backports to the version mapping for --bpo.
  * bts: Support the "stretch", "buster", "stretch-ignore" and "buster-ignore"
    tags.

  [ Stefano Zacchiroli ]
  * bts:
    + Support for the "newcomer" tag
    + Backward compatibility for the old "gift" usertag: drop
      documentation for it, but do both gift and newcomer (user)tagging for
      the time being

 -- Paul Wise <pabs@debian.org>  Sun, 19 Oct 2014 17:27:24 +0800

devscripts (2.14.10) unstable; urgency=medium

  * Fix all the other calls to dpkg-architecture in devscripts.
    (Closes: #764963 ... again)

 -- James McCoy <jamessan@debian.org>  Mon, 13 Oct 2014 22:35:31 -0400

devscripts (2.14.9) unstable; urgency=medium

  * debuild: Only pass -a/-t to dpkg-architecture when the user has specified
    values for them.  (Closes: #764963)

 -- James McCoy <jamessan@debian.org>  Sun, 12 Oct 2014 21:32:05 -0400

devscripts (2.14.8) unstable; urgency=medium

  [ James McCoy ]
  * uscan:
    + Ensure $keyring is defined before trying to use it when checking whether
      the upstream keyring exists.