@@ -164,6 +164,10 @@ case $# in
 	then
 	    if [ -n "$targetarch" ] && [ -n "$targetgnusystem" ]; then
 		mustsetvar arch "$(dpkg-architecture "-a${targetarch}" "-t${targetgnusystem}" -qDEB_HOST_ARCH)" "build architecture"
+	    elif [ -n "$targetarch" ]; then
+		mustsetvar arch "$(dpkg-architecture "-a${targetarch}" -qDEB_HOST_ARCH)" "build architecture"
+	    elif [ -n "$targetgnusystem" ]; then
+		mustsetvar arch "$(dpkg-architecture "-t${targetgnusystem}" -qDEB_HOST_ARCH)" "build architecture"
 	    else
 		mustsetvar arch "$(dpkg-architecture -qDEB_HOST_ARCH)" "build architecture"
 	    fi
